home page css updated, the background on the header no longer bleeds into the slideshow when scrolling down (done by setting the backing to position absolute), The bottom end of the slideshow has been covered with a new div

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@ a {
 
 .header_back {
     top: 0px;
-    position: fixed;
+    position: absolute;
     background-color: rgb(37, 34, 34);
     height: 5rem;
     width: 100%;
@@ -61,15 +61,16 @@ a {
     padding-bottom: 1.5rem;
     padding-top: 1.2rem;
 }
-.home {
-    /*background-color: white;
-    color: rgb(51, 49, 48);*/
-    height: 75%;
-    padding-bottom: 3rem;
-}
 
 .home_slide {
     object-fit: cover;
+}
+
+.home_body {
+    background-color: rgb(37, 34, 34);
+    min-height: 10rem;
+    padding-top: 3rem;
+    margin-top: 30rem;
 }
 
 .more_button {  /* this section and the 2 below makes the link look like a button */
